--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <!-- HEADER -->
     <header>
-        <nav class="myNavBar navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="myNavBar navbar navbar-expand-lg navbar-light">
             <div class="col-7">
                 <div class="myNavBar__left">
                     <a class="navbar-brand" href="#">
@@ -35,9 +35,9 @@
                     <form class="myNavBar__font-search">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Search For Courses"></input>
-                            <span class="input-group-text" id="basic-addon2">
+                            <div class="input-group-text" id="basic-addon2">
                                 <i class="fa fa-search"></i>
-                            </span>
+                            </div>
                           </div>
                           
                     </form>
@@ -45,20 +45,20 @@
             </div>
             <div class="col-5">
                 <div class="myNavBar__right">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                           <a class="nav-link"href="#">Udemy for business</a>
-                          <div class="overplay">
+                          <!-- <div class="overplay">
                               <p>Get your team access to Udemy’s top 2,500 courses anytime, anywhere.</p>
                               <a href="#">Try Udemy For Business</a>
-                          </div>
+                          </div> -->
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Become a instructor</a>
-                          <div class="overplay">
+                          <!-- <div class="overplay">
                             <p>Get your team access to Udemy’s top 2,500 courses anytime, anywhere.</p>
                             <a href="#">Try Udemy For Business</a>
-                        </div>
+                        </div> -->
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
