--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                           <a class="nav-link"href="#">Udemy for business</a>
-                          <!-- <div class="overplay">
+                          <div class="overplay">
                               <p>Get your team access to Udemy’s top 2,500 courses anytime, anywhere.</p>
                               <a href="#">Try Udemy For Business</a>
-                          </div> -->
+                          </div>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Become a instructor</a>
-                          <!-- <div class="overplay">
+                          <div class="overplay">
                             <p>Get your team access to Udemy’s top 2,500 courses anytime, anywhere.</p>
                             <a href="#">Try Udemy For Business</a>
-                        </div> -->
+                        </div>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item myNavBar__card">
                             <a class="nav-link" href="#">
                                 <i class="fa fa-shopping-cart"></i>
                             </a>
                           </li>
-                          <li class="nav-item">
+                          <li class="nav-item myNavBar__buttons">
                               <button class="button button-white">Log In</button>
                               <button class="button button-red">Sign Up</button>
                         </li>
