--- a/index.html
+++ b/index.html
@@ -83,7 +83,19 @@
     </header>
 
     <!-- COVER -->
-    <section class="cover"></section>
+    <section class="cover">
+        <div class="cover__content">
+            <h1>Learn you schedule</h1>
+            <P>Ambition accepted. Learn the latest skills to reach your professional goals.
+            </P>
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search For Courses"></input>
+                <div class="input-group-text" id="basic-addon2">
+                    <i class="fa fa-search"></i>
+                </div>
+              </div>
+        </div>
+    </section>
 
     <!-- INTRO -->
     <section class="intro"></section>
